added new service / updated project